@@ -55,7 +55,7 @@ func TestPayloadTransform(t *testing.T) {
 					Log:       baseLog(),
 					Exception: &Exception{
 						Message:    "exception message",
-						Stacktrace: m.Stacktrace{m.StacktraceFrame{Filename: "myFile"}},
+						Stacktrace: m.Stacktrace{&m.StacktraceFrame{Filename: "myFile"}},
 					},
 					Transaction: &struct{ Id string }{Id: "945254c5-67a5-417e-8a4e-aa29efcbfb79"},
 				}},
